# eu-taxonomy-rag

./: .env.example  .gitignore  CLAUDE.md  PROJECT_BRIEF.md  README.md  docker-compose.yml  notes.md  pyproject.toml
docker/postgres/init/: 00_init.sql
eval/: golden_dataset.json
eval/golden_dataset_v1/: questions.json
eval/hard_01/: evaluator_guide.md  questions.json
eval/simple_v1/: evaluator_guide.md  questions.json
notebooks/: 01_ingestion_experiments.ipynb  02_retrieval_experiments.ipynb  03_agent_experiments.ipynb
prompts/: base_v1.txt  compliance_v1.txt
reference/: README.md
reference/rag/: naive.py
scripts/: evaluate.py  ingest.py  ingest_corpus.py  report.py
src/taxonomy_rag/: config.py  eval_report.py
src/taxonomy_rag/agents/: base.py  compliance_checker.py  llm_direct.py  mock.py  react.py  react_naive_corpus_advanced_rag.py  react_naive_corpus_hybrid_rag.py  react_naive_corpus_multi_rag.py  react_naive_corpus_vector_rag.py  react_naive_rag.py
src/taxonomy_rag/db/: connection.py  repository.py
src/taxonomy_rag/embeddings/: embedder.py
src/taxonomy_rag/eval/: harness.py  metrics.py
src/taxonomy_rag/ingestion/: models.py  pipeline.py
src/taxonomy_rag/llm/: loop.py  provider.py
src/taxonomy_rag/rag/: advanced.py  hybrid.py  naive.py
src/taxonomy_rag/readers/: base.py  pdf.py  url.py  (+2 more)
tests/: conftest.py
tests/integration/: conftest.py  test_repository.py
tests/unit/: test_agents_unit.py  test_ingestion.py  test_loop.py  test_provider.py  test_rag.py  test_retrieval.py  test_search_tool.py  test_strategies.py  test_toolkit.py
(+31 files in other folders)
